Lade till rubriker

--- a/main.tex
+++ b/main.tex
@@ -33,8 +33,18 @@
 \customtitle
 \newpage
 \tableofcontents
+
+\section{Problemdefinition}
+\section{Kriterielista}
+\subsection{Krav}
+\subsection{Önskemål}
+\subsubsection{Viktning av önskemål}
+\section{Funktionsanalys}
+\section{Lösningssökning}
+\subsection{Kombination av dellösningar}
+\subsection{Kontroll av lösningssystemet}
+\subsection{Riskanalys}
+\section{Det slutgiltiga lösningssystemet}
+
 \newpage
-
-
-
 \end{document}
